# tor-requests

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  wheels.yml
examples/: async_example.py  basic.py  context_manager.py  onion_service.py  requests_session.py
python/tor_requests/: __init__.py  _native.pyi  async_socket.py  config.py  context.py  exceptions.py  session.py  socket.py  tls.py
rust/: Cargo.toml
rust/src/: client.rs  config.rs  error.rs  lib.rs  runtime.rs  stream.rs
tests/integration/: conftest.py  test_real_tor.py
tests/unit/: test_async_socket.py  test_config.py  test_context.py  test_init.py  test_session.py  test_socket_api.py  test_tls.py
